Basically only change the social about bar. WIP

--- a/_includes/themes/bootstrap/default-about.html
+++ b/_includes/themes/bootstrap/default-about.html
@@ -93,6 +93,7 @@ lantoniotrento@gmail.com
 
 <script src="{{ BASE_PATH }}/assets/js/custom/classie.js"></script>
 <script src="{{ BASE_PATH }}/assets/js/custom/demo1.js"></script>
+<script src="{{ BASE_PATH }}/assets/js/custom/mailchimp.js"></script>
 <script src="{{ BASE_PATH }}/assets/js/bootstrap/bootstrap.min.js"></script>
 
 
