--- a/_includes/themes/bootstrap/default-post.html
+++ b/_includes/themes/bootstrap/default-post.html
@@ -96,6 +96,7 @@ lantoniotrento@gmail.com
 <script src="{{ BASE_PATH }}/assets/js/custom/classie.js"></script>
 <script src="{{ BASE_PATH }}/assets/js/custom/prism.js"></script>
 <script src="{{ BASE_PATH }}/assets/js/custom/demo1.js"></script>
+<script src="{{ BASE_PATH }}/assets/js/custom/mailchimp.js"></script>
 <script src="{{ BASE_PATH }}/assets/js/bootstrap/bootstrap.min.js"></script>
 
 
