--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -83,6 +83,7 @@ lantoniotrento@gmail.com
 <script type="text/javascript" src="{{ BASE_PATH }}/assets/js/custom/examples.js"></script>
 <script src="{{ BASE_PATH }}/assets/js/custom/classie.js"></script>
 <script src="{{ BASE_PATH }}/assets/js/custom/demo1.js"></script>
+<script src="{{ BASE_PATH }}/assets/js/custom/mailchimp.js"></script>
 
 <script type="text/javascript">
     $(document).ready(function() {
