--- a/_includes/about-bar.html
+++ b/_includes/about-bar.html
@@ -6,10 +6,10 @@
   
   <div class="card">
     <br />
-    <img class="card-img-top img-fluid" src="{{ BASE_PATH }}/assets/img/big/about/antonio_trento_profile.png" alt="Antonio Trento profile image">
+    <img class="card-img-top img-fluid" src="{{ BASE_PATH }}/assets/img/kibi_logo_final_02.png" alt="Antonio Trento profile image">
     <div class="card-block">
       <h4 class="card-title">Antonio Trento</h4>
-      <p class="card-text">Appasionate to grow hacking and web marketing.</p>
+      <p class="card-text">唷唷唷唷唷唷唷唷唷唷.</p>
       <p class="card-text">Dream of developing a profitable business on the web.</p>
       <p class="card-text">You can contact me by press one of downstair social buttons.</p>
       {% include social-block.html %}
