--- a/assets/css/custom/examples.css
+++ b/assets/css/custom/examples.css
@@ -1,13 +1,13 @@
-@CHARSET "ISO-8859-1";
+@CHARSET "UTF-8";
 
-@import url('https://fonts.googleapis.com/css?family=Alfa+Slab+One|Gentium+Book+Basic');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC:500&display=swap&subset=chinese-traditional');
 /* Reset CSS
  * --------------------------------------- */
 
 /* Custom CSS
  * --------------------------------------- */
 body{
-	font-family: 'Gentium Book Basic', cursive;
+	font-family: 'Noto Sans TC', '微軟正黑體', sans-serif;
 	color: #fff;
 	color: rgba(0,0,0,0.5);
 }
@@ -18,7 +18,7 @@ body{
 	position: relative;
 }
 h1,h2,h3,h4,h5,h6 {
-    font-weight: normal;
+    font-weight: 500;
     font-size: 100%;
     margin:0;
     padding:0;
@@ -838,31 +838,31 @@ input.cbp-mc-submit:hover {
 
 .post h2{
 	color: #ff5a71;
-	font-family: 'Alfa Slab One', cursive;
+	/*font-family: 'Alfa Slab One', cursive;*/
 	line-height: 1.8;
 }
 
 .post h3{
 	color: #ff5a71;
-	font-family: 'Alfa Slab One', cursive;
+  /*font-family: 'Alfa Slab One', cursive;*/
 	line-height: 1.8;
 }
 
 .post h4{
 	color: #ff5a71;
-	font-family: 'Alfa Slab One', cursive;
+  /*font-family: 'Alfa Slab One', cursive;*/
 	line-height: 1.8;
 }
 
 .post h5{
 	color: #ff5a71;
-	font-family: 'Alfa Slab One', cursive;
+  /*font-family: 'Alfa Slab One', cursive;*/
 	line-height: 1.8;
 }
 
 .post h6{
 	color: #ff5a71;
-	font-family: 'Alfa Slab One', cursive;
+  /*font-family: 'Alfa Slab One', cursive;*/
 	line-height: 1.8;
 }
 
