--- a/assets/css/custom/examples.css
+++ b/assets/css/custom/examples.css
@@ -18,7 +18,7 @@ body{
 	position: relative;
 }
 h1,h2,h3,h4,h5,h6 {
-    font-weight: 500;
+    font-weight: normal;
     font-size: 100%;
     margin:0;
     padding:0;
@@ -442,16 +442,19 @@ p{
 /* TEXT SHADOWS
 * --------------------------------------- */
 .heavy {
+font-family: 'Noto Sans TC', '微軟正黑體', sans-serif;
 text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1), 0px 18px 23px rgba(0, 0, 0, 0.1);
 }
 
 .large-blur {
+font-family: 'Noto Sans TC', '微軟正黑體', sans-serif;
 text-shadow: 0 0 1em rgba(0, 0, 0, 0.9);
 }
 
 /*------------------------------HIGTHLIGHTER----------------------------------*/
 
 .highlight-container, .highlight {
+font-family: 'Noto Sans TC', '微軟正黑體', sans-serif;
 position: relative;
 }
 
