--- a/_includes/themes/bootstrap/default-blog.html
+++ b/_includes/themes/bootstrap/default-blog.html
@@ -22,7 +22,7 @@ https://www.linkedin.com/in/antoniotrento/
 https://twitter.com/lantoniotrento
 lantoniotrento@gmail.com
 -->
-<html lang="en">
+<html lang="zh-TW">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
