--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -51,7 +51,10 @@ lantoniotrento@gmail.com
 	<![endif]-->
     <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
     <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
+
     <!-- Google ADS mobile block-->
+<script data-ad-client="ca-pub-7419111388177824" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
     {% if site.google_ad_client %}
     <script type="text/javascript" async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script type="text/javascript">
