--- a/assets/test/Ave_Counting_2020_Ranking/css/main.css
+++ b/assets/test/Ave_Counting_2020_Ranking/css/main.css
@@ -180,10 +180,10 @@ th, td {
 }
 
 .table100.ver5 .row100:hover td {
-  color: #fe3e64;
+  color: #FFB30F;
 }
 
-.table100.ver5 .hov-column-ver5 {color: #fe3e64;}
+.table100.ver5 .hov-column-ver5 {color: #FFB30F;}
 .table100.ver5 .hov-column-ver5::before {
   content: "";
   display: block;
@@ -199,11 +199,11 @@ th, td {
 
 .table100.ver5 .hov-column-head-ver5 {
   background-color: #1a3f48 !important;
-  color: #fe3e64;
+  color: #FFB30F;
 }
 
 .table100.ver5 .row100 td:hover {
-  color: #fe3e64;
+  color: #FFB30F;
 }
 
 .table100.ver5 .row100 td:hover:before {
@@ -215,5 +215,5 @@ th, td {
   top: 0;
   left: 0;
   pointer-events: none;
-  border: 1px solid #fe3e64;
+  border: 1px solid #FFB30F;
 }
